--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ repository               : "kunjing96/kunjing96.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
-google_analytics_id      : 13674986010 # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      : G-0JLLE1DPMB # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
 google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
